--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "league/csv": "^9.27",
         "phpoffice/phpspreadsheet": "^5.2",
         "tightenco/ziggy": "^2.0"
     },
